# adbimport_rs

./: .gitignore  AGENTS.md  Cargo.toml
assets/: adb_export_160308.xsd.xml  adb_export_160715.xsd.xml  adbx_dma1.xsl
examples/: query_rkyv.rs  wasm_load_rkyv.rs
examples/trunk_search/: Cargo.toml  README.md  index.html
examples/trunk_search/public/: README.md
examples/trunk_search/src/: main.rs
src/: lib.rs  main.rs
src/genealogy/: mod.rs  parse_astrodatabank.rs
tests/: smoke.rs
