[package]
name = "trunk_search"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
adbimport = { path = "../.." }
rkyv = "0.8"

wasm-bindgen = "0.2"
js-sys = "0.3"

# Minimal web bindings.
web-sys = { version = "0.3", features = [
  "Window",
  "Document",
  "HtmlInputElement",
  "HtmlTextAreaElement",
  "HtmlElement",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "console",
] }

# Fetch future -> WASM
wasm-bindgen-futures = "0.4"

